--- a/vignettes/manipulate_FREM_models.Rmd
+++ b/vignettes/manipulate_FREM_models.Rmd
@@ -20,11 +20,15 @@ suppressPackageStartupMessages(library(PMXFrem))
 
 ## Introduction
 
-The PsN frem command generates a NONMEM model file includes the FREM implementation with all covariates. A straight forward way to remove or add covariates to an existing FREM model is to re-run the PsN frem command with the new set of covariate. However, the frem command can sometime take a long time, or the frem command may have been run with a subset of covariates, or it is realized that one covariates should be removed from the frem model (for whatever reason). 
+The PsN `frem` command generates a NONMEM model file that includes the FREM implementation of the covariates specified as input to `frem`. However, there may be instances when an existing FREM model has to be modified. Examples include the addition/removal of covariates from the model and the addition or removal of subjects in the analysis data set.
 
-Another model development challenge may be to update the initial estimates in the FREM model. The PsN command `update_inits` can usually be used for this but sometimes, with many covariates,  the updated inits may not provide a valid OMEGA matrix.
+A particular use case may be when there is a lot of data and covariates and the FREM model from the `frem` command has convergence issues, or if the analyst wants to have more control of the addition of covariates and data sources to the model. 
 
-The `PMXFrem` function `updateFREM` is designed to be able to add or remove covariates from an existing FREM model and/or to update the initial estimates of the parameters.
+Another model development challenge may be to update the initial estimates in the FREM model. The PsN command `update_inits` can usually be used for this but sometimes, with many covariates, the updated inits may not provide a valid OMEGA matrix for the FREM model.
+
+A straight forward way to remove or add data or covariates to an existing FREM model is to re-run the PsN `frem` command with the new set of covariate. However, the `frem` command can sometime take a long time and the reason to generate a smaller FREM model in the first hand may be to add data and covariate in a granular fashion without involving the `frem` command.
+
+The `PMXFrem` function `updateFREM()` addresses these issues by being able to add or remove covariates from an existing FREM model and/or to update the initial estimates of the parameters.
 
 
 ## Removing a covariate from a FREM model
