--- a/vignettes/standard_diagnostics.Rmd
+++ b/vignettes/standard_diagnostics.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r setup, echo=FALSE}
 suppressPackageStartupMessages(library(GGally))
 suppressPackageStartupMessages(library(ggpubr))
 suppressPackageStartupMessages(library(PMXFrem))
